[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/settings_panel.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/panels/settings_panel.png" type="Texture" id=2]
[ext_resource path="res://scenes/big_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Autumn Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/bool_slider.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 0.392157 )
extra_spacing_bottom = 15
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("core:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, 96.2958 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="settings_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
pnl_clr = Color( 0.917647, 0.529412, 0.0745098, 1 )
buttons = [ NodePath("core/play_tutorial"), NodePath("core/guide") ]

[node name="color_rect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="core" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1377.08, -2.50107 )

[node name="back" type="Button" parent="core"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="panel_img" type="TextureRect" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -379.0
margin_right = 282.0
margin_bottom = 379.0
texture = ExtResource( 2 )

[node name="play_tutorial" parent="core" instance=ExtResource( 3 )]
margin_left = -240.0
margin_top = 54.9631
margin_right = 244.0
margin_bottom = 173.963
button_name = "Play Tutorial"

[node name="guide" parent="core" instance=ExtResource( 3 )]
margin_left = -240.0
margin_top = 194.963
margin_right = 244.0
margin_bottom = 313.963
button_name = "Guide"
highlight = true

[node name="label" type="Label" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -161.63
margin_right = -53.0
margin_bottom = -73.6299
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Music"

[node name="music" parent="core" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -85.0369
margin_right = -10.0
margin_bottom = 34.9631

[node name="label2" type="Label" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = -162.0
margin_right = 194.0
margin_bottom = -74.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Sound"

[node name="sound" parent="core" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -85.0369
margin_right = 240.0
margin_bottom = 34.9631

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/open_panel = SubResource( 2 )
[connection signal="pressed" from="core/back" to="." method="close_panel"]
[connection signal="pressed" from="core/play_tutorial" to="." method="_on_play_tutorial_pressed"]
[connection signal="pressed" from="core/guide" to="." method="_on_guide_pressed"]
